fix the sticky under header fix the responsive issues on mobile

--- a/lms/static/custom_css/dashboard.css
+++ b/lms/static/custom_css/dashboard.css
@@ -68,7 +68,7 @@ padding:20px 25px;
     color: #ffffff !important;
      text-decoration: none;
       text-align: center; 
-      margin: 30px auto;
+      margin: 5px auto;
        margin-bottom: 10px; }
 .program-card__header {
   margin-bottom: 24px;
